Closed Bug 1277449 Opened 8 years ago Closed 8 years ago

Fix typo for Register::invalid_reg on non-JIT platform

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

The following landing has typo for non-JIT platform.  We should use  Registers::invalid_reg instead of Register::invalid_reg.

changeset:   299539:d21a912dfd85
user:        Luke Wagner <luke@mozilla.com>
date:        Mon May 30 10:09:53 2016 -0500
summary:     Bug 1271010 - Baldr: add real heterogeneous function table (r=bbouvier)
Comment on attachment 8759015 [details] [diff] [review]
Fix typo for Register::invalid_reg on non-JIT platform

Review of attachment 8759015 [details] [diff] [review]:
-----------------------------------------------------------------

Oops, thanks!
Attachment #8759015 - Flags: review?(luke) → review+
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d66df97e2190
Fix typo for Register::invalid_reg on non-JIT platform. r=luke
https://hg.mozilla.org/mozilla-central/rev/d66df97e2190
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: