Bug 1277449 - Fix typo for Register::invalid_reg on non-JIT platform. r=luke

MozReview-Commit-ID: 6P1PQVXdSWM